# mini-current-meter

./: README.md
code/: Cargo.toml  cfg.toml.samp  partitions.csv  sdkconfig.defaults
code/src/: currentlogs.rs  displayctl.rs  main.rs  transfer.rs  wifi.rs
dashboard/: mini-current-meter.json
hardware/: bom.csv  bottom-v10.3mf  currentmeter.kicad_pcb  currentmeter.kicad_prl  currentmeter.kicad_pro  currentmeter.kicad_sch  upper-v10.3mf
hardware/Lib.pretty/: IC18_ESP32-C3-WROOM-02-N4_EXP.kicad_mod  OLED I2C DISPLAY.kicad_mod  SLIDE_SW_IS1235-G.kicad_mod  USB_C_5077CR-16-SMC2-BK-TR.kicad_mod  WS-TASV SMT Tact Switch.kicad_mod
