[package]
name = "mini-current-meter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "=0.36", features = ["binstart"] }
esp-idf-svc = "=0.51"
embedded-svc = "=0.28"

log = "0.4"
anyhow = "1"
embedded-hal = "=1.0.0"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7" }
esp-idf-hal = "0.45.2"
embedded-graphics = "0.7"
bmp = "0.5.0"
tinybmp = "0.4.0"
toml-cfg = "0.1.3"
ssd1306 = "0.7"
chrono = "0.4.41"

[build-dependencies]
embuild = "0.28"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
